# postgresql-python

./: .dockerignore  Dockerfile  README.md  createdb.sql  docker-compose.yml  main.py  pyproject.toml
